--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Nitintom.github.io/Rat-in-a-Maze---React-Project---s5qv2smmmko3",
+  "homepage": "https://github.com/Nitintom/Rat-in-a-Maze---React-Project---s5qv2smmmko3",
   "name": "ratinamaze",
   "version": "0.1.0",
   "private": true,
